sqlmap (0.6.3-1) stable; urgency=low

  * Minor enhancement to be able to specify the number of seconds to wait
    between each HTTP request;
  * Minor improvements to sqlmap Debian package files: sqlmap uploaded
    to official Debian project repository;
  * Minor bug fix to handle session.error and session.timeout in HTTP
    requests;
  * Minor bug fix to correctly dump table entries when the column is
    provided;

 -- Bernardo Damele A. G. <bernardo.damele@gmail.com>  Day,  X YYY 2008 10:00:00 +0000

sqlmap (0.6.2-1) stable; urgency=low

  * Major bug fix to correctly dump tables entries when --stop is not
    specified;
  * Major bug fix so that the users' privileges enumeration now works
    properly also on both MySQL < 5.0 and MySQL >= 5.0;
  * Major bug fix when the request is POST to also send the GET parameters
    if any have been provided;
  * Major bug fix to correctly update sqlmap to the latest stable release
    with command line --update;
  * Major bug fix so that when the expected value of a query (count
    variable) is an integer and, for some reasons, its resumed value from
    the session file is a string or a binary file, the query is executed
    again and its new output saved to the session file;
  * Minor bug fix in MySQL comment injection fingerprint technique;
  * Minor improvement to correctly enumerate tables, columns and dump
    tables entries on Oracle and on PostgreSQL when the database name is
    not 'public' schema or a system database;
  * Minor improvement to be able to dump entries on MySQL < 5.0 when
    database name, table name and column(s) are provided;
  * Updated the database management system fingerprint checks to correctly
    identify MySQL 5.1.x, MySQL 6.0.x and PostgreSQL 8.3;
  * More user-friendly warnin messages.

 -- Bernardo Damele A. G. <bernardo.damele@gmail.com>  Sun,  2 Nov 2008 19:00:00 +0000

sqlmap (0.6.1-1) stable; urgency=low
